--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ project(PolygonIntersec)
 cmake_minimum_required(VERSION 2.8)
 
 if(WIN32) # if windows, insert your opencv path.
-	set(OpenCV_DIR "C:/OpenCV/OpenCV2.4.10/opencv/build")
+	set(OpenCV_DIR "C:/OpenCV/opencv-2.4.9/build")
 endif(WIN32)
 
 find_package(OpenCV REQUIRED)
